--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "net": "^1.0.2",
     "typescript": "^4.5.4"
   },
+  "scripts": {
+    "start": "node ./dist/main.js"
+  },
   "devDependencies": {
     "@types/node": "^17.0.1"
   }
