--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "typescript": "^4.5.4"
   },
   "scripts": {
-    "start": "node ./dist/main.js"
+    "start": "node ./dist/main.js",
+    "evia": "node ./dist/evia.js"
   },
   "devDependencies": {
     "@types/node": "^17.0.1"
